<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="default_server"
        android:summary="Default server"
        android:title="@string/pref_title_default_server"
        android:entries="@array/servers"
        android:entryValues="@array/serverIds" />

    <EditTextPreference
        android:defaultValue="localhost"
        android:key="server1"
        android:summary="Host name to connect"
        android:singleLine="true"
        android:title="@string/pref_title_server_1" />

    <EditTextPreference
        android:defaultValue="Server1"
        android:key="server_name1"
        android:summary="Host title"
        android:singleLine="true"
        android:title="@string/pref_title_server_name1" />

    <EditTextPreference
        android:defaultValue=""
        android:key="server2"
        android:summary="Host name to connect"
        android:singleLine="true"
        android:title="@string/pref_title_server_2" />

    <EditTextPreference
        android:defaultValue=""
        android:key="server_name2"
        android:summary="Host title"
        android:singleLine="true"
        android:title="@string/pref_title_server_name2" />

    <EditTextPreference
        android:defaultValue=""
        android:key="server3"
        android:summary="Host name to connect"
        android:singleLine="true"
        android:title="@string/pref_title_server_3" />

    <EditTextPreference
        android:defaultValue=""
        android:key="server_name3"
        android:summary="Host title"
        android:singleLine="true"
        android:title="@string/pref_title_server_name3" />

</PreferenceScreen>
