<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ap="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="3"
    android:orientation="vertical"
    tools:context=".EnvSensorsFragment">

    <com.androidplot.xy.XYPlot
        style="@style/APDefacto.Light"
        android:id="@+id/plot_temp"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        ap:title="@string/temp"
        ap:rangeTitle="°C"
        ap:domainTitle="@string/time"
        ap:lineLabels="left|bottom"
        ap:lineLabelRotationBottom="-45"/>

    <com.androidplot.xy.XYPlot
        style="@style/APDefacto.Light"
        android:id="@+id/plot_humi"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        ap:title="@string/humi"
        ap:rangeTitle="%"
        ap:domainTitle="@string/time"
        ap:lineLabels="left|bottom"
        ap:lineLabelRotationBottom="-45"/>

    <com.androidplot.xy.XYPlot
        style="@style/APDefacto.Light"
        android:id="@+id/plot_pres"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        ap:title="@string/pres"
        ap:rangeTitle="hPa"
        ap:domainTitle="@string/time"
        ap:lineLabels="left|bottom"
        ap:lineLabelInsetLeft="40dp"
        ap:lineLabelRotationBottom="-45"/>
</LinearLayout>